--- a/part3/package.json
+++ b/part3/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../part2/puhelinluettelo && npm run build && cp -r build ../../part3",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
